fix scrollbar OK

--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -173,7 +173,7 @@ section.todolist {
 	height: auto;
 	margin: auto;
 	padding: 10px;
-
+	overflow: hidden;
 	>h1 {
 		@media (height < 1000px) {
 			font-size: 20px;
